# sequence_similarity

./: CMakeLists.txt  LICENSE
.cache/clangd/index/: global_alignment.cpp.6BA84763D2E365F4.idx  global_alignment.h.3F2D9AA1D5CC59BF.idx  helpers.cpp.D51D0DE6F0FF5602.idx  helpers.h.FC97F7FFC6D684C4.idx  main.cpp.EEB11ACC7566A7A4.idx  test_alignment.cpp.8B681E7012130510.idx
data/: test_alignments.csv  test_sequences.csv
src/: CMakeLists.txt
src/similarity/: main.cpp
src/similarity/utils/: global_alignment.cpp  global_alignment.h  helpers.cpp  helpers.h
test/: CMakeLists.txt  test_alignment.cpp
